<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/question_three"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/shehu_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_three_option_one"
                android:textSize="22sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/tafawa_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_three_option_two"
                android:textSize="22sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/buhari_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/question_three_option_three"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/obasanjo_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_three_option_four"
                android:textSize="22sp"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>


    </LinearLayout>

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_chevron_right_grey_900_24dp"
        android:onClick="thirdNextButton"/>

</RelativeLayout>